# cmake_learning

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/doc/: hello.txt
t3 /lib/: CMakeLists.txt  hello.c
t4/src/: CMakeLists.txt  main.c
t5/src/: CMakeLists.txt  main.c
t6/cmake/: FindHELLO.cmake
t6/src/: main.c
